# ncnn_embedded

./: CMakeLists.txt  CMakeLists.txt~  build.sh
3516D/: CopyOfCMakeCache.txt  Makefile  cmake_install.cmake
3516D/examples/: Makefile  cmake_install.cmake  fasterrcnn  squeezenet
3516D/examples/ssd/: Makefile  cmake_install.cmake  ssdmobilenet  ssdsqueezenet
3516D/src/: Makefile  cmake_install.cmake  layer_declaration.h  layer_registry.h
build-arm-gcc-armv7/: CMakeCache.txt
examples/: squeezenet.cpp  squeezenet.cpp~
release_ov798/: CMakeCache.txt  arm-gcc.toolchain.cmake~  arm-none-eabi-gcc.toolchain.cmake
src/: CMakeLists.txt
src/layer/arm/: convolution_arm.cpp
tmp/: arm-gcc.toolchain.cmake
